--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,10 @@
 
     <TextView
         android:id="@+id/textView2"
+        style="@style/MyStyle"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/textview_height"
         android:text="@string/hello_textview"
-        android:textColor="@color/my_color"
-        android:textSize="@dimen/text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -20,13 +19,12 @@
 
     <TextView
         android:id="@+id/textView"
+        style="@style/MyStyle"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/textview_height"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="236dp"
         android:text="@string/hello_textview"
-        android:textColor="@color/my_color"
-        android:textSize="@dimen/text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
